# syncfilter-plugin

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: CMakeLists.txt  CurveEditor.cpp  CurveEditor.h  CurveMath.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RotaryLookAndFeel.h
Source/Source/: CurveEditor.cpp  CurveEditor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.h  RotaryLookAndFeel.h
